[package]
name = "solana-sky-trade"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_sky_trade"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet = []
idl-build = [
    "anchor-lang/idl-build", 
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-bubblegum = "1.0.0"
ahash = "0.8.11"
spl-associated-token-account = "3.0.4"
