[package]
name = "solana-sky-trade"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_sky_trade"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build", 
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
anchor-spl = "0.30.1"
mpl-bubblegum = "1.4.0"
mpl-token-metadata = "4.1.2"
spl-account-compression = "0.3.0"
spl-associated-token-account = "3.0.4"
chrono = "0.4.38"
